--- a/index.html
+++ b/index.html
@@ -1,67 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Showdown Guide</title>
-        <meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="keywords" content="naraka bladepoint, showdown, campaign, pve, omnious, guide, guides, naraka, souljades, 
-			defuse, aegis, sense, progression, leveling, recasting, converting, conversion, dps, build, builds">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <title>Showdown Guide</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="keywords"
+      content="naraka bladepoint, showdown, campaign, pve, omnious, guide, guides, naraka, souljades, 
+			defuse, aegis, sense, progression, leveling, recasting, converting, conversion, dps, build, builds"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-        <!-- Primary Meta Tags -->
-		<meta name="title" content="Naraka Bladepoint Showdown Guide">
-		<meta name="description" content="A guide designed to help players progress in Naraka's Campaign mode.">
-		<meta name="author" content="xZer0x">
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Naraka Bladepoint Showdown Guide" />
+    <meta
+      name="description"
+      content="A guide designed to help players progress in Naraka's Campaign mode."
+    />
+    <meta name="author" content="xZer0x" />
 
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://dark-zer0.github.io/Showdown/">
-		<meta property="og:title" content="Naraka Bladepoint Showdown Guide">
-		<meta property="og:description" content="A guide designed to help players progress in Naraka's Campaign mode.">
-		<meta property="og:image" content="https://dark-zer0.github.io/Showdown/img/site/banner.jpg">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dark-zer0.github.io/Showdown/" />
+    <meta property="og:title" content="Naraka Bladepoint Showdown Guide" />
+    <meta
+      property="og:description"
+      content="A guide designed to help players progress in Naraka's Campaign mode."
+    />
+    <meta
+      property="og:image"
+      content="https://dark-zer0.github.io/Showdown/img/site/banner.jpg"
+    />
 
-		<!-- Twitter / Discord -->
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="https://dark-zer0.github.io/Showdown/">
-		<meta property="twitter:title" content="Naraka Bladepoint Showdown Guide">
-		<meta property="twitter:description" content="A guide designed to help player progression in Naraka's Campaign mode.">
-		<meta property="twitter:image" content="https://dark-zer0.github.io/Showdown/img/site/banner.jpg">
+    <!-- Twitter / Discord -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://dark-zer0.github.io/Showdown/"
+    />
+    <meta property="twitter:title" content="Naraka Bladepoint Showdown Guide" />
+    <meta
+      property="twitter:description"
+      content="A guide designed to help player progression in Naraka's Campaign mode."
+    />
+    <meta
+      property="twitter:image"
+      content="https://dark-zer0.github.io/Showdown/img/site/banner.jpg"
+    />
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-		<!-- Website -->
-		<link rel="shortcut icon" type="image/x-icon" href="img/site/icon.png">
-		<link rel="icon" href="img/site/icon.png" type="images" sizes="32x32"> 
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="css/bootstrap.css">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet"> 
-		<script src="https://kit.fontawesome.com/6d78549c29.js" crossorigin="anonymous"></script>
-		<link href="styles.css" rel="stylesheet">
-		<script src="src/navbar.js"></script>
-    </head>
-    <body>
-		<!-- Navigation Bar -->
-		<div id="navbar"></div>
-			<!-- Load Navigation Bar Script -->
-			<script>
-				fetch('navbar.html')
-					.then(response => response.text())
-					.then(data => {
-					document.getElementById('navbar').innerHTML = data;
-				});
-			</script>
+    <!-- Website -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/site/icon.png" />
+    <link rel="icon" href="img/site/icon.png" type="images" sizes="32x32" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/6d78549c29.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="styles.css" rel="stylesheet" />
+    <script src="src/navbar.js"></script>
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <div id="navbar"></div>
+    <!-- Load Navigation Bar Script -->
+    <script>
+      fetch("navbar.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("navbar").innerHTML = data;
+        });
+    </script>
 
-		<!-- Banner -->
-		<div class="banner">
-			<img src="img/site/banner.jpg" alt="Banner">
-		</div>
+    <!-- Banner -->
+    <div class="banner">
+      <img src="img/site/banner.jpg" alt="Banner" />
+    </div>
 
-		<!-- What is Showdown? -->
-		<h1>What is Showdown?</h1>
-		<p class="center">Showdown is a PvE game mode in Naraka Bladepoint also referred to as its Campaign mode. 
-			Teams of up to 3 can face off against various enemies and bosses through varying levels of difficulty.
-			It can be great for players who are just starting Naraka as well as veterans seeking to mix things up.
-			Progression you make in this game mode however does not contribute to PvP and vice versa. 
-			There are also rewards for playing it, such as its own Game Pass, Exclusive Badges & Titles, and Limited Time Events.</p>
-		<p class="center">To learn more, click one of the tabs from the menu up top.</p>
-    </body>
+    <!-- What is Showdown? -->
+    <h1>What is Showdown?</h1>
+    <p class="center">
+      Showdown is a PvE game mode in Naraka Bladepoint also referred to as its
+      Campaign mode. Teams of up to 3 can face off against various enemies and
+      bosses through varying levels of difficulty. It can be great for players
+      who are just starting Naraka as well as veterans seeking to mix things up.
+      Progression you make in this game mode however does not contribute to PvP
+      and vice versa. There are also rewards for playing it, such as its own
+      Game Pass, Exclusive Badges & Titles, and Limited Time Events.
+    </p>
+    <p class="center">
+      To learn more, click one of the tabs from the menu up top.
+    </p>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
